--- a/Ubuntu/Vagrantfile
+++ b/Ubuntu/Vagrantfile
@@ -1,7 +1,9 @@
 BOX_IMAGE = "peru/ubuntu-18.04-server-amd64"
 SETUP_MASTER = true
+MEM_MASTER = 2048
 SETUP_NODES = true
 NODE_COUNT = 2
+MEM_NODE = 1024
 MASTER_IP = "192.168.26.10"
 NODE_IP_NW = "192.168.26."
 #NODE_IP_NW = "192.168.122."
@@ -59,13 +61,16 @@ EOF
 
 # Helm
 
-curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
-
-# Traefik 1.x
+curl -s https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
 helm repo add stable https://charts.helm.sh/stable
 
-cat <<EOF |helm install -f - -n kube-system --version 1.81.0 traefik stable/traefik
+# Metrics
+helm install metrics-server stable/metrics-server --version 2.11.4 --set 'args={--kubelet-insecure-tls}' --namespace kube-system
+
+# Traefik 1.x
+
+cat <<EOF | helm install traefik stable/traefik --version 1.81.0 --namespace kube-system -f -
 dashboard:
   enabled: true
   domain:  "#{OAM_DOMAIN}"
@@ -140,29 +145,6 @@ spec:
               number: 80
 EOF
 
-
-cat <<EOF | kubectl apply -f -
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: kubernetes-dashboard-ingress
-  namespace: kubernetes-dashboard
-  annotations:
-    kubernetes.io/ingress.class: "traefik"
-spec:
-  rules:
-  - host: "#{OAM_DOMAIN}"
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: kubernetes-dashboard
-            port:
-              number: 80
-EOF
-
 SCRIPT
 
 Vagrant.configure("2") do |config|
@@ -172,7 +154,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "libvirt" do |l|
     l.cpus = 1
-    l.memory = "1024"
+    l.memory = MEM_NODE
   end
 
   config.vm.provision :shell, :path => "install-ubuntu.sh"
@@ -187,12 +169,12 @@ Vagrant.configure("2") do |config|
       subconfig.vm.network :private_network, ip: MASTER_IP
       subconfig.vm.provider :libvirt do |vb|
         vb.cpus = 2
-        vb.memory = 2048
+        vb.memory = MEM_MASTER
       end
       subconfig.vm.provision :shell, inline: $kubemasterscript
     end
   end
-  
+
   if SETUP_NODES
     (1..NODE_COUNT).each do |i|
       config.vm.define "node#{i}" do |subconfig|
