--- a/Ubuntu/Vagrantfile
+++ b/Ubuntu/Vagrantfile
@@ -154,7 +154,12 @@ Vagrant.configure("2") do |config|
   config.vm.box_check_update = false
   config.vm.provider :libvirt
 
-  config.vm.provider "libvirt" do |l|
+  config.vm.provider :virtualbox do |l|
+    l.cpus = 1
+    l.memory = "#{MEM_NODE}"
+  end
+
+  config.vm.provider :libvirt do |l|
     l.cpus = 1
     l.memory = MEM_NODE
   end
@@ -169,10 +174,17 @@ Vagrant.configure("2") do |config|
     config.vm.define "master" do |subconfig|
       subconfig.vm.hostname = "master"
       subconfig.vm.network :private_network, ip: MASTER_IP
-      subconfig.vm.provider :libvirt do |vb|
-        vb.cpus = 2
-        vb.memory = MEM_MASTER
+
+      subconfig.vm.provider :virtualbox  do |vb|
+        vb.customize ["modifyvm", :id, "--cpus", "2"]
+        vb.customize ["modifyvm", :id, "--memory", "#{MEM_MASTER}"]
       end
+
+      subconfig.vm.provider :libvirt do |lv|
+        lv.cpus = 2
+        lv.memory = MEM_MASTER
+      end
+
       subconfig.vm.provision :shell, inline: $kubemasterscript
     end
   end
