--- a/Ubuntu/Vagrantfile
+++ b/Ubuntu/Vagrantfile
@@ -7,7 +7,7 @@ MEM_MASTER = 2048
 SETUP_NODES = true
 NODE_COUNT = 2
 MEM_NODE = 1024
-SETUP_APPS = (ENV["SETUP_APPS"] || "true")
+SETUP_APPS = true
 MASTER_IP = "192.168.26.10"
 NODE_IP_NW = "192.168.26."
 #NODE_IP_NW = "192.168.122."
@@ -16,6 +16,8 @@ OAM_DOMAIN = "oam.cluster-01.company.com"
 
 #Generate new using steps in README.md
 KUBETOKEN = "b029ee.968a33e8d8e6bb0d"
+
+load ".env"
 
 $kubeminionscript = <<MINIONSCRIPT
 
