--- a/Ubuntu/Vagrantfile
+++ b/Ubuntu/Vagrantfile
@@ -89,6 +89,10 @@ curl -sfL https://raw.githubusercontent.com/coreos/flannel/master/Documentation/
 sed -i -e '/--kube-subnet-mgr/a\\' -e '        - --iface=eth1' /tmp/kube-flannel.yml
 kubectl apply -f /tmp/kube-flannel.yml
 
+# Local storage
+
+kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
+
 SCRIPT
 
 $kubeappsscript = <<APPSSCRIPT
@@ -213,7 +217,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provider :libvirt do |l|
-    l.cpus = 2
+    l.cpus = 1
     l.memory = MEM_NODE
   end
 
@@ -229,7 +233,7 @@ Vagrant.configure("2") do |config|
       subconfig.vm.network :private_network, ip: MASTER_IP
 
       subconfig.vm.provider :virtualbox do |vb|
-        vb.customize ["modifyvm", :id, "--cpus", "3"]
+        vb.customize ["modifyvm", :id, "--cpus", "2"]
         vb.customize ["modifyvm", :id, "--memory", "#{MEM_MASTER}"]
       end
 
